# job_tracker

./: .gitignore  Dockerfile  DockerfileLocal  README.md  dev.sh  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: main.yml
job_tracker/: app.py  config.py  db.py  etl.py  job_tracker.py  jobs.py  models.py  parsers.py  tracker.py
src/: api.py  db.py  job_tracker.py  jobs.py
src/env/: env.py
tests/: test_jobs.py
