[tool.poetry]
name = "job-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "job_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pymongo = "^4.3.3"
poetry-dotenv-plugin = "^0.1.0"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
